<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center">
    <LinearLayout
        android:orientation="horizontal"
        android:padding="0dp"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">
        <ImageView
            android:id="@+id/custom_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/sample"
            android:scaleType="centerCrop"
            android:src="@mipmap/sample"/>
        <LinearLayout
            android:orientation="vertical"
            android:padding="0dp"
            android:layout_marginStart="10dp"
            android:background="#FFFFFF"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_gravity="start"
                android:gravity="start"
                android:background="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/custom_title"
                    android:text="@string/review_code"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/custom_dot"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_gravity="center"
                    android:layout_margin="7dp"
                    android:contentDescription="@string/sample"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/dot"/>

                <TextView
                    android:id="@+id/custom_time"
                    android:text="@string/now"
                    android:textColor="#444444"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:id="@+id/custom_body"
                android:text="@string/need_to_review_some_codes_at_7_pm"
                android:textColor="#444444"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/custom_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:text="@string/like"
        android:textColor="#005FEE"
        android:background="@drawable/bordered_button"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="8dp" />

</LinearLayout>